revert newer java api usage